--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid" *ngIf="userIsAuthenticated">
    <div class="row">
      <div class="col-lg-12">
         <app-header></app-header>
@@ -22,5 +22,3 @@
       </div>
     </div>
 </div>
-
-
